Fix navbar-btn vertical align

--- a/wp-content/themes/distylight/assets/css/_layout.sass
+++ b/wp-content/themes/distylight/assets/css/_layout.sass
@@ -126,7 +126,7 @@ header.navigation
       img
         width: 50%
     .btn-navbar
-      margin-top: 1em
+      margin-top: 0.5em
 
   #primary
     padding-top: 3em
